[tool.poetry]
name = "sitios-minca"
version = "0.1.0"
description = "Una aplicacion de pruebas de administrar sitios turisticos en Minca"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = {extras = ["standar"], version = "^0.15.0"}
psycopg2 = "^2.9.2"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
